problem 48 solved and fixed

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "big-integer": "^1.6.44",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
