--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
+    "ejs": "^2.7.1",
+    "ejs-layout": "^1.0.15",
     "express": "~4.16.1",
     "fetch": "^1.1.0",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.1"
   },
